added logic for displaying users, albums, photos

--- a/users-album/src/index.css
+++ b/users-album/src/index.css
@@ -1,29 +1,33 @@
 
 * {
-  list-style: none;
-  text-decoration: none;
-  color: #4D4D4D;
+    list-style: none;
+    text-decoration: none;
+    color: #4D4D4D;
 }
 
 body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
 
+h1, p {
+    text-align: center;
+}
+
 .container {
-  max-width: 800px;
-  margin: auto;
+    max-width: 800px;
+    margin: auto;
 }
 
 button {
-  cursor: pointer;
+    cursor: pointer;
 }
